--- a/style.css
+++ b/style.css
@@ -38,3 +38,23 @@ background: linear-gradient(90deg, rgba(255,40,40,1) 0%, rgba(248,81,31,1) 15%, 
 }
 
 .heading_div:hover{background-color: rgb(255, 0, 0);}
+
+canvas
+{
+    border: 5px solid rgb(0, 4, 255);
+    border-radius: 20px;
+    box-shadow: 10px 10px 15px rgb(255, 0, 0);
+    margin-top: 150px;
+}
+
+.copy_right_footer
+{
+    position: fixed;
+    color: white;
+    bottom: 10;
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+    line-height:3;
+    text-align:center;
+
+}
