--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
     font-size: 30px;
     width: 75%;
     margin:0px;
-    box-shadow: 5px 5px 5px rgb(0, 59, 253);
+    box-shadow: 5px 5px 5px rgb(0, 0, 0);
     background: rgb(255,40,40);
 background: linear-gradient(90deg, rgba(255,40,40,1) 0%, rgba(248,81,31,1) 15%, rgba(0,14,255,1) 30%, rgba(0,250,255,1) 50%, rgba(45,44,165,1) 70%, rgba(255,0,113,1) 85%, rgba(255,0,65,1) 100%);
 border-radius:20px;
-margin-top: 15px;
-border-width: 5px;
-border-style:double;
+margin-top: 1px;
+border-width: 10px;
+border-style:hidden;
 font-family:serif;
 font-weight: 50;
 text-decoration:underline;
@@ -50,11 +50,12 @@ canvas
 .copy_right_footer
 {
     position: fixed;
-    color: white;
+    color: rgb(255, 0, 0);
     bottom: 10;
     width: 100%;
     background-color: rgb(0, 0, 0);
     line-height:3;
     text-align:center;
+    font-size: large;
 
 }
